traversal.snake.Snake.scala.error
Compilation error:
Snake:1: error: Boolean.type does not take parameters
def positionFinale() = Boolean {
                               ^